--- a/project.org
+++ b/project.org
@@ -10,6 +10,7 @@
 *** Turn the weight matrix into block-diagonal:
     paper:[[https://scicomp.stackexchange.com/questions/5486/rearrange-an-ordinary-matrix-to-block-diagonal-form][Turn a matrix into block-diagonal]] 
 
+*** Prune weights and biases separately?
 ** Think about Beta-BBB
 
 ** Implement variational CNNs or RNNs
